--- a/src/Header/header.css
+++ b/src/Header/header.css
@@ -1,17 +1,52 @@
+@import url('https://fonts.googleapis.com/css2?family=Rochester');
+@import url('https://fonts.googleapis.com/css2?family=Rokkitt');
+
 #header-image {
-  width: 8%;
+  width: 100%;
   height: 7em;
   margin: 0 0 0 1em;
 }
 
 header {
-  background-color:#0F0E0E;
+  width: 100%;
   height: 8em;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.header-text {
-  
+.logo-container {
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  margin-left: 1em;
+}
+
+.header-logo-text {
+  font-size: 48px;
+  color: white;
+  font-family: Rochester, cursive;
+}
+
+.logo-R {
+  position: relative;
+  bottom: 0.8em;
+  left: 0.3em;
+}
+
+.header-name-title-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  bottom: 1em;
+  left: 1em;
+}
+
+.header-name-title {
+  color: white;
+  font-family: Rokkitt;
+  font-size: 16px;
 }
