Create Footer component and add nav

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -6,7 +6,11 @@
 }
 
 body {
-  background-image: url(../images/Background-Portfolio-1.jpg)
+  background-image: url(../images/Background-Portfolio-1.jpg);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 95vh;
 }
 
 nav {
