--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -6,20 +6,21 @@ footer {
 }
 
 .white-line {
-  width: 80%;
+  width: 85%;
 }
 
 .contact-container {
-  width: 20%;
+  width: 30%;
   height: fit-content;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: .4em;
+  margin-left: 5em;
 }
 
 .nav-bar-area {
-  width: 80%;
+  width: 70%;
   display: flex;
 }
 
@@ -39,4 +40,9 @@ nav {
 .nav-bar-item:hover {
   color: greenyellow;
   transform: scale(1.2)
+}
+
+.contact-text {
+  color: white;
+  font-family: Rokkitt;
 }
