--- a/src/App/App.css
+++ b/src/App/App.css
@@ -9,6 +9,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
   min-height: 95vh;
 }
 
