--- a/src/Header/header.css
+++ b/src/Header/header.css
@@ -9,7 +9,7 @@
 
 header {
   width: 100%;
-  height: 8em;
+  height: 6em;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -19,7 +19,8 @@ header {
   width: fit-content;
   display: flex;
   align-items: center;
-  margin-left: 1em;
+  margin: 2em 0 0 1em;
+
 }
 
 .header-logo-text {
