--- a/src/Header/header.css
+++ b/src/Header/header.css
@@ -1,12 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Rochester');
 @import url('https://fonts.googleapis.com/css2?family=Rokkitt');
 
-#header-image {
-  width: 100%;
-  height: 7em;
-  margin: 0 0 0 1em;
-}
-
 header {
   width: 100%;
   height: 6em;
@@ -19,8 +13,10 @@ header {
   width: fit-content;
   display: flex;
   align-items: center;
-  margin: 2em 0 0 1em;
-
+  position: relative;
+  top: 1em;
+  left: 1em;
+  height: 6em;
 }
 
 .header-logo-text {
@@ -33,6 +29,13 @@ header {
   position: relative;
   bottom: 0.8em;
   left: 0.3em;
+}
+
+.DR-logo {
+  width: fit-content;
+  height: 6em;
+  position: relative;
+  bottom: 1em;
 }
 
 .header-name-title-container {
@@ -50,4 +53,8 @@ header {
   color: white;
   font-family: Rokkitt;
   font-size: 16px;
+}
+
+.header-link {
+  height: 6em;
 }
