Adjust buttons to be anchors and style them

--- a/src/ProjectDetail/ProjectDetail.css
+++ b/src/ProjectDetail/ProjectDetail.css
@@ -41,8 +41,13 @@
   justify-content: space-between;
 }
 
-.details-nav-button {
+.details-anchor {
   width: 40%;
+  height: auto;
+}
+
+.details-nav-button {
+  width: 100%;
   height: auto;
   font-size: 1.5em;
   font-family: Rokkitt;
