--- a/src/ProjectDetail/ProjectDetail.css
+++ b/src/ProjectDetail/ProjectDetail.css
@@ -23,8 +23,9 @@
   width: 45%;
   height: auto;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
 }
 
 .project-detail-description {
@@ -32,6 +33,12 @@
   height: auto;
   text-align: center;
   font-size: 1.3em;
+}
+
+.login-info-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
 
