--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -16,7 +16,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: .4em;
+  margin-top: 0.4em;
   margin-left: 5em;
 }
 
@@ -40,10 +40,38 @@ nav {
 
 .nav-bar-item:hover {
   color: greenyellow;
-  transform: scale(1.2)
+  transform: scale(1.2);
 }
 
 .contact-text {
   color: white;
   font-family: Rokkitt;
+}
+
+@media only screen and (max-width: 450px) {
+  /* for mobile */
+  nav {
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    align-content: space-evenly;
+    height: 5em;
+  }
+
+  .nav-bar-area {
+    flex-direction: column;
+    width: 90%;
+  }
+
+  .contact-container {
+    display: none;
+  }
+
+  footer {
+    justify-content: space-between;
+  }
+
+  .nav-bar-item {
+    margin: 0;
+  }
 }
