--- a/src/Homepage/Homepage.css
+++ b/src/Homepage/Homepage.css
@@ -9,10 +9,21 @@
 
 .summary {
   text-align: center;
-  font-size: 24px
+  font-size: 24px;
 }
 
 .headshot {
   width: 20%;
   height: auto;
+}
+
+@media only screen and (max-width: 450px) {
+  .headshot {
+    margin: 0.25em 0 0.25em 0;
+    width: 50%;
+  }
+
+  .summary {
+    font-size: 1.25em;
+  }
 }
